--- a/styles/style.css
+++ b/styles/style.css
@@ -78,3 +78,30 @@ body {
     line-height: 30px;
     margin: 0px 660px;
 }
+
+.flowers-container {
+    margin: 48px 240px 0;
+    border: 2px solid black;
+}
+
+.flowers-with-background img {
+    margin-left: 8px;
+}
+
+#flower-one {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    padding: 110px 75px 0 75px;
+}
+
+#flower-two {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    padding: 117px 45px 50px 45px;
+}
+
+#flower-three {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    padding: 67px 73px 0px 73px;
+}
