--- a/styles/style.css
+++ b/styles/style.css
@@ -115,3 +115,23 @@ body {
     background: rgba(71, 125, 17, 0.15);
     padding: 67px 73px 0px 73px;
 }
+
+/* Delivery and support related styles */
+
+.delivery-support-parent-container {
+    margin: 100px 240px 0;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+}
+
+.delivery-support-container {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 85px;
+}
+
+.delivery-support-content h5 {
+    color: #272727;
+    font-size: 24px;
+    font-weight: 600;
+}
