--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,17 @@ body {
     border-radius: 8px;
     background: #E55473;
     border: 0;
-    padding: 20px 43px;
     color: #FFF;
+    padding: 20px 43px;
     font-size: 20px;
     font-weight: 500;
+}
+
+.button-primary:hover {
+    border: 4px solid #E55473;
+    background: #FFF;
+    color: #111010;
+    padding: 16px 39px;
 }
 
 .bg-primary {
@@ -40,7 +47,6 @@ body {
     font-size: 40px;
     font-weight: 800;
     margin-bottom: 25px;
-    /* margin-top: 150px; */
 }
 
 .align-primary {
@@ -91,10 +97,6 @@ body {
 
 /* Featured flower styles */
 
-/* .featured-flowers-container {
-    margin-top: 150px;
-} */
-
 .flowers-container-primary h5 {
     text-align: center;
     margin-top: 30px;
@@ -142,6 +144,45 @@ body {
     font-weight: 600;
 }
 
+/* Our best deals related styles  */
+
+.best-deals-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    gap: 30px;
+}
+
+.best-deals {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    flex-direction: column;
+    align-self: baseline;
+}
+
+.best-deals img {
+    width: 200px;
+    background: rgba(73, 163, 214, 0.103);
+    border-radius: 20px 140px;
+}
+
+#best-deals-one {
+    padding: 40px 30px 1px;
+}
+
+#best-deals-two {
+    padding: 80px 30px 60px;
+}
+
+#best-deals-three {
+    padding: 64px 30px 1px;
+}
+
+#best-deals-four {
+    padding: 88px 30px 1px;
+}
 
 /* Hot deals and discount related styles */
 .hot-deals-parent-container {
